Painel Materiais + Card

--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@
     background-color: #0070ba;
     color: #f0f0f0;
 }
+
+#painel_sol {
+    background-color: #0070ba;
+    color: #f0f0f0;
+}
+
+#painel_mat {
+    background-color: #0070ba;
+    color: #f0f0f0;
+}
