--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
     background-color: #0070ba;
     color: #f0f0f0;
 }
+
+.hidden {
+    display: none;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.visible {
+    opacity: 1;
+}
