--- a/style.css
+++ b/style.css
@@ -22,3 +22,34 @@
     background-color: #0070ba;
     color: #f0f0f0;
 }
+
+#painel_aprov {
+    background-color: #0070ba;
+    color: #f0f0f0;
+}
+
+/* .botao-download {
+    background-color: #0070ba;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 16px;
+    border-color: #0070ba;
+} */
+
+
+#botao {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #botao:hover {
+    background-color: #0056b2;
+    transform: scale(1.1);
+  }
